--- a/examples/rag_langchain.ipynb
+++ b/examples/rag_langchain.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Basic RAG pipeline with LangChain"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -58,14 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Loader and splitter"
+    "## Loader and splitter"
    ]
   },
   {
@@ -146,7 +146,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b38d07d5fed4618a44ecf261e1e5c44",
+       "model_id": "02ec5bb258e94419b725a824b8af2acc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Embeddings"
+    "## Embeddings"
    ]
   },
   {
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vector store"
+    "## Vector store"
    ]
   },
   {
@@ -240,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### LLM"
+    "## LLM"
    ]
   },
   {
@@ -318,7 +318,7 @@
     {
      "data": {
       "text/plain": [
-       "'The human annotation of DocLayNet was performed on 80863 pages.\\n\\nExplanation:\\nThe information is found in the paragraph \"DocLayNet contains 80863 PDF pages\" in the context.'"
+       "'\\n80K pages were human annotated for DocLayNet.'"
       ]
      },
      "execution_count": 12,
