update to new docling-core and update test results with figures
Signed-off-by: Michele Dolfi <dol@zurich.ibm.com>

--- a/tests/data/2203.01017v2.md
+++ b/tests/data/2203.01017v2.md
@@ -20,6 +20,8 @@ Tables organize valuable content in a concise and compact representation. This c
 
 b. Red-annotation of bounding boxes, Blue-predictions by TableFormer
 
+<!-- image -->
+
 c. Structure predicted by TableFormer:
 
 Figure 1: Picture of a table with subtle, complex features such as (1) multi-column headers, (2) cell with multi-row text and (3) cells with no content. Image from PubTabNet evaluation set, filename: 'PMC2944238 004 02'.
@@ -77,6 +79,9 @@ We rely on large-scale datasets such as PubTabNet [37], FinTabNet [36], and Tabl
 
 Figure 2: Distribution of the tables across different table dimensions in PubTabNet + FinTabNet datasets
 
+<!-- image -->
+Figure 2: Distribution of the tables across different table dimensions in PubTabNet + FinTabNet datasets
+
 balance in the previous datasets.
 
 The PubTabNet dataset contains 509k tables delivered as annotated PNG images. The annotations consist of the table structure represented in HTML format, the tokenized text and its bounding boxes per table cell. Fig. 1 shows the appearance style of PubTabNet. Depending on its complexity, a table is characterized as "simple" when it does not contain row spans or column spans, otherwise it is "complex". The dataset is divided into Train and Val splits (roughly 98% and 2%). The Train split consists of 54% simple and 46% complex tables and the Val split of 51% and 49% respectively. The FinTabNet dataset contains 112k tables delivered as single-page PDF documents with mixed table structures and text content. Similarly to the PubTabNet, the annotations of FinTabNet include the table structure in HTML, the tokenized text and the bounding boxes on a table cell basis. The dataset is divided into Train, Test and Val splits (81%, 9.5%, 9.5%), and each one is almost equally divided into simple and complex tables (Train: 48% simple, 52% complex, Test: 48% simple, 52% complex, Test: 53% simple, 47% complex). Finally the TableBank dataset consists of 145k tables provided as JPEG images. The latter has annotations for the table structure, but only few with bounding boxes of the table cells. The entire dataset consists of simple tables and it is divided into 90% Train, 3% Test and 7% Val splits.
@@ -120,6 +125,12 @@ CNN Backbone Network. A ResNet-18 CNN is the backbone that receives the table im
 
 Figure 3: TableFormer takes in an image of the PDF and creates bounding box and HTML structure predictions that are synchronized. The bounding boxes grabs the content from the PDF and inserts it in the structure.
 
+<!-- image -->
+Figure 3: TableFormer takes in an image of the PDF and creates bounding box and HTML structure predictions that are synchronized. The bounding boxes grabs the content from the PDF and inserts it in the structure.
+
+Figure 4: Given an input image of a table, the Encoder produces fixed-length features that represent the input image. The features are then passed to both the Structure Decoder and Cell BBox Decoder . During training, the Structure Decoder receives 'tokenized tags' of the HTML code that represent the table structure. Afterwards, a transformer encoder and decoder architecture is employed to produce features that are received by a linear layer, and the Cell BBox Decoder. The linear layer is applied to the features to predict the tags. Simultaneously, the Cell BBox Decoder selects features referring to the data cells (' < td > ', ' < ') and passes them through an attention network, an MLP, and a linear layer to predict the bounding boxes.
+
+<!-- image -->
 Figure 4: Given an input image of a table, the Encoder produces fixed-length features that represent the input image. The features are then passed to both the Structure Decoder and Cell BBox Decoder . During training, the Structure Decoder receives 'tokenized tags' of the HTML code that represent the table structure. Afterwards, a transformer encoder and decoder architecture is employed to produce features that are received by a linear layer, and the Cell BBox Decoder. The linear layer is applied to the features to predict the tags. Simultaneously, the Cell BBox Decoder selects features referring to the data cells (' < td > ', ' < ') and passes them through an attention network, an MLP, and a linear layer to predict the bounding boxes.
 
 forming classification, and adding an adaptive pooling layer of size 28*28. ResNet by default downsamples the image resolution by 32 and then the encoded image is provided to both the Structure Decoder , and Cell BBox Decoder .
@@ -222,6 +233,10 @@ Japanese language (previously unseen by TableFormer):
 
 Example table from FinTabNet:
 
+<!-- image -->
+
+<!-- image -->
+
 b. Structure predicted by TableFormer, with superimposed matched PDF cell text:
 
 |                                                    |             | 論文ファイル   | 論文ファイル   | 参考文献   | 参考文献   |
@@ -249,6 +264,14 @@ Text is aligned to match original for ease of viewing
 
 Figure 5: One of the benefits of TableFormer is that it is language agnostic, as an example, the left part of the illustration demonstrates TableFormer predictions on previously unseen language (Japanese). Additionally, we see that TableFormer is robust to variability in style and content, right side of the illustration shows the example of the TableFormer prediction from the FinTabNet dataset.
 
+<!-- image -->
+Figure 5: One of the benefits of TableFormer is that it is language agnostic, as an example, the left part of the illustration demonstrates TableFormer predictions on previously unseen language (Japanese). Additionally, we see that TableFormer is robust to variability in style and content, right side of the illustration shows the example of the TableFormer prediction from the FinTabNet dataset.
+
+<!-- image -->
+
+Figure 6: An example of TableFormer predictions (bounding boxes and structure) from generated SynthTabNet table.
+
+<!-- image -->
 Figure 6: An example of TableFormer predictions (bounding boxes and structure) from generated SynthTabNet table.
 
 ## 5.5. Qualitative Analysis
@@ -381,6 +404,9 @@ Although TableFormer can predict the table structure and the bounding boxes for 
 
 Figure 7: Distribution of the tables across different dimensions per dataset. Simple vs complex tables per dataset and split, strict vs non strict html structures per dataset and table complexity, missing bboxes per dataset and table complexity.
 
+<!-- image -->
+Figure 7: Distribution of the tables across different dimensions per dataset. Simple vs complex tables per dataset and split, strict vs non strict html structures per dataset and table complexity, missing bboxes per dataset and table complexity.
+
 · TableFormer output does not include the table cell content.
 
 · There are occasional inaccuracies in the predictions of the bounding boxes.
@@ -433,18 +459,46 @@ Figure 8: Example of a table with multi-line header.
 
 Figure 9: Example of a table with big empty distance between cells.
 
+<!-- image -->
+Figure 9: Example of a table with big empty distance between cells.
+
 Figure 10: Example of a complex table with empty cells.
+
+<!-- image -->
+Figure 10: Example of a complex table with empty cells.
+
+<!-- image -->
 
 Figure 11: Simple table with different style and empty cells.
 
+<!-- image -->
+Figure 11: Simple table with different style and empty cells.
+
+Figure 12: Simple table predictions and post processing.
+
+<!-- image -->
 Figure 12: Simple table predictions and post processing.
 
 Figure 13: Table predictions example on colorful table.
 
 Figure 14: Example with multi-line text.
 
+<!-- image -->
+Figure 14: Example with multi-line text.
+
 Figure 16: Example of how post-processing helps to restore mis-aligned bounding boxes prediction artifact.
+
+<!-- image -->
+Figure 16: Example of how post-processing helps to restore mis-aligned bounding boxes prediction artifact.
+
+<!-- image -->
 
 Figure 15: Example with triangular table.
 
+<!-- image -->
+Figure 15: Example with triangular table.
+
+Figure 17: Example of long table. End-to-end example from initial PDF cells to prediction of bounding boxes, post processing and prediction of structure.
+
+<!-- image -->
 Figure 17: Example of long table. End-to-end example from initial PDF cells to prediction of bounding boxes, post processing and prediction of structure.
