--- a/tests/data/redp5695.md
+++ b/tests/data/redp5695.md
@@ -1,6 +1,12 @@
 Front cover
 
+<!-- image -->
+
 ## IBM Cloud Pak for Data on IBM Z
+
+<!-- image -->
+
+<!-- image -->
 
 ## Executive overview
 
@@ -38,6 +44,9 @@ Figure 1 on page 3 shows a picture of the IBM z16 mainframe.
 
 Figure 1 IBM z16
 
+<!-- image -->
+Figure 1 IBM z16
+
 ## IBM z16 and IBM LinuxONE Emperor 4 features
 
 IBM Z are based on enterprise mainframe technology. Starting with transaction-based workloads and databases, IBM Z has undergone tremendous transformations in its system design for many generations to build servers that cater to Linux-based workloads and security with a cyberresilient system, and support quantum computing and modernization by using a hybrid cloud with a focus on data and AI.
@@ -46,10 +55,16 @@ Figure 2 provides a snapshot of the IBM Z processor roadmap, which depicts the j
 
 Figure 2 IBM Z: Processor roadmap
 
+<!-- image -->
+Figure 2 IBM Z: Processor roadmap
+
 The IBM z16 and IBM LinuxONE Emperor 4 are the latest of the IBM Z, and they are developed with a 'built to build' focus to provide a powerful, cyberresilient, open, and secure platform for business with an extra focus on sustainability to help build sustainable data centers. Although the z16 server can host both IBM z/OSfi and Linux workloads, LinuxONE Emperor 4 is built to host Linux only workloads with a focus on consolidation and resiliency. Depending on the workload, consolidation from numerous x86 servers into a LinuxONE Emperor 4 can help reduce energy consumption by 75% and data center floor space by 50%, which helps to achieve the sustainability goals of the organization.
 
 Figure 3 on page 5 shows a summary of the system design of IBM LinuxONE Emperor 4 with the IBM Telum™ processor. The IBM Telum processor chip is designed to run enterprise applications efficiently where their data resides to embed AI with super low latency. The support for higher bandwidth and I/O rates is supported through FCP Express cards with an endpoint security solution. The memory subsystem supports up to 40 TB of memory.
 
+Figure 3 System design of IBM z16 LinuxONE Emperor 4
+
+<!-- image -->
 Figure 3 System design of IBM z16 LinuxONE Emperor 4
 
 The IBM z16 and IBM LinuxONE Emperor 4 servers are built with 7-nm technology at a 5.2 GHz speed. They consist of four dual-chip modules (DCMs) per central processor complex (CPC) drawer, each of which is built with two 8-core Telum processor chips that has "first in the industry" on-chip acceleration for mid-transaction, real-time AI inferencing, which supports many different use cases, including fraud detection.
@@ -60,10 +75,16 @@ Figure 4 provides more information about the features of AI Accelerator integrat
 
 Figure 4 IBM z16 on-chip AI Accelerator integration with IBM Z processor cores
 
+<!-- image -->
+Figure 4 IBM z16 on-chip AI Accelerator integration with IBM Z processor cores
+
 The IBM z16 and IBM LinuxONE Emperor 4 server platforms are built with the hardware features that are shown in Figure 4 with addressing data and AI workloads in mind. Regardless of where the ML and deep learning (DL) frameworks are used to build and train data and AI models, the inferencing on existing enterprise application data can happen along currently running enterprise business applications. CP4D 4.6 supports Tensorflow and IBM Snap ML frameworks, which are optimized to use the on-chip AI Accelerator during inferencing. Support for various other frameworks is planned for future releases.
 
 Figure 5 on page 7 shows the seamless integration of AI into existing enterprises workloads on the IBM z16 while leveraging the underlying hardware capabilities.
 
+Figure 5 Seamless integration
+
+<!-- image -->
 Figure 5 Seamless integration
 
 ## What is Cloud Pak for Data on IBM Z
@@ -74,6 +95,9 @@ CP4D on IBM Z provides enterprises with a resilient and secure private cloud pla
 
 Figure 6 shows a solution overview of CP4D. The infrastructure alternatives are shown at the bottom, and they include IBM Z and LinuxONE. They all leverage Red Hat OpenShift. Common Foundational Services come next, which offer clarity throughout the data and AI lifecycle, that is, from user access management to monitoring and service provisioning. A high-level view of the services is shown in the middle section. The services have several different capabilities that span the AI hierarchy. The platform can be expanded, and it offers a seamless user experience for all distinct personas across the AI lifecycle, from data gathering through AI infusion.
 
+Figure 6 Solution overview of Cloud Pak for Data
+
+<!-- image -->
 Figure 6 Solution overview of Cloud Pak for Data
 
 We highlight the four main pillars that make IBM Z the correct infrastructure for CP4D:
@@ -134,6 +158,9 @@ Traditional ML models' power most of today's ML applications in business and amo
 
 Figure 7 on page 11 provides an overview of the components that are supported on CP4D on IBM Z. You can leverage Watson Studio for model building, training, and validation, and WML for deployment of the model. Eventually, applications can use the AI inference endpoint to score the model.
 
+Figure 7 Developing, training, and deploying an AI model on Cloud Pak for Data on IBM Z and IBM LinuxONE
+
+<!-- image -->
 Figure 7 Developing, training, and deploying an AI model on Cloud Pak for Data on IBM Z and IBM LinuxONE
 
 In summary, here are some of the reasons why you should choose AI on IBM Z:
@@ -228,6 +255,9 @@ For example, a business can start testing a model before production for fairness
 
 Figure 8 Typical AI model lifecycle
 
+<!-- image -->
+Figure 8 Typical AI model lifecycle
+
 Due to regulations, more stakeholders adopt the typical AI model lifecycle to protect their brand from new end-to-end risks. To ensure various aspects of both regulatory compliance and security, the personas that must be involved include the chief financial officer (CFO), chief marketing officer (CMO), chief data officer (CDO), HR, and chief regulatory officer (CRO), along with the data engineers, data scientists, and business analysts, who build AI workflows.
 
 ## IBM governance solution for IBM Z
@@ -280,42 +310,72 @@ Figure 9 on page 16 shows the end-to-end flow for a remote AI governance solutio
 
 Figure 9 Remote AI governance solution end-to-end flow
 
+<!-- image -->
+Figure 9 Remote AI governance solution end-to-end flow
+
 To achieve end-to-end AI governance, complete the following steps:
 
 1. Create a model entry in IBM OpenPages by using CP4D on a x86 platform, as shown in Figure 10.
 
 Figure 10 Creating a model entry in IBM OpenPages
 
+<!-- image -->
+Figure 10 Creating a model entry in IBM OpenPages
+
 2. Train a model by using Watson Studio and by using development tools such as Jupyter Notebook or JupyterLab on CP4D on Red Hat OpenShift on a virtual machine on IBM Z, as shown in Figure 11.
 
+Figure 11 Training an AI model by using Watson Studio
+
+<!-- image -->
 Figure 11 Training an AI model by using Watson Studio
 
 3. Deploy the model by using WML on CP4D on Red Hat OpenShift on a virtual machine on IBM Z, as shown in Figure 12.
 
 Figure 12 Deploying an AI model by using WML on Cloud Pak for Data
 
+<!-- image -->
+Figure 12 Deploying an AI model by using WML on Cloud Pak for Data
+
 4. Track the external model lifecycle by browsing through the Catalogs/Platform assets catalog by using AI Factsheets and OpenPages while using CP4D on an x86 platform, as shown in Figure 13. The external model (deployed on CP4D on Red Hat OpenShift on a virtual machine on IBM Z) is saved as a platform asset catalog on the x86 platform.
 
+Figure 13 External model
+
+<!-- image -->
 Figure 13 External model
 
 You can track the model through each stage of the model lifecycle, as shown in Figure 14, by using AI Factsheets and OpenPages.
 
 Figure 14 Tracking the model
 
+<!-- image -->
+Figure 14 Tracking the model
+
 You can see that the model facts are tracked and synchronized to IBM OpenPages for risk management, as shown in Figure 15.
 
+Figure 15 Model facts that are tracked and synchronized to IBM OpenPages on an x86 platform
+
+<!-- image -->
 Figure 15 Model facts that are tracked and synchronized to IBM OpenPages on an x86 platform
 
 5. Create an external model by using IBM OpenScale on the x86 platform, as shown in Figure 16.
 
 Figure 16 Creating an external model on an x86 platform
 
+<!-- image -->
+Figure 16 Creating an external model on an x86 platform
+
 IBM OpenScale provides a comprehensive dashboard that tracks fairness, quality monitoring, drift, and explainability of a model. Fairness determines whether your model produces biased outcomes. Quality determines how well your model predicts outcomes. Drift is the degradation of predictive performance over time. A sample is shown in Figure 17 on page 21.
 
 Figure 17 IBM OpenScale dashboard that is used to monitor the external model
 
+<!-- image -->
+Figure 17 IBM OpenScale dashboard that is used to monitor the external model
+
 You developed and deployed the AI model by using Watson Studio, WML on CP4D on Red Hat OpenShift on a virtual machine on IBM Z, and end-to-end AI model governance by leveraging AI Factsheets, OpenScale, and OpenPages on CP4D on a x86 platform. Figure 18 shows end-to-end AI governance when using IBM OpenPages, AI Factsheets, and OpenScale.
 
+Figure 18 Final result: End-to-end AI governance when using IBM OpenPages, AI Factsheets, and OpenScale
+
+<!-- image -->
 Figure 18 Final result: End-to-end AI governance when using IBM OpenPages, AI Factsheets, and OpenScale
 
 ## Use case 2: Credit default risk assessment
@@ -336,6 +396,9 @@ Figure 19 on page 23 shows a sample architecture about how to design and develop
 
 Figure 19 Architecture for credit risk prediction by using an ML AI model on IBM Z
 
+<!-- image -->
+Figure 19 Architecture for credit risk prediction by using an ML AI model on IBM Z
+
 A data scientist can leverage Watson Studio to develop and train an AI model and WML to deploy and score the model. In this sample architecture, the WML Python run time leverages the ML framework, IBM Snap Machine Learning (Snap ML), for scoring, can leverage an integrated AI accelerator at the time of model import.
 
 Then, the banking loan approval team can send a loan applicant request to the IBM WebSphere Application Server, which can make a request to the AI inference endpoint. The AI inference engine scores the transaction and sends the result back to the loan approval team. Based on the results, the approval team can decide on whether to approve a loan or not, and also decide how much they can lend, timelines, and other factors.
@@ -348,6 +411,9 @@ We showed how IBM Z enable customers to use AI frameworks to detect credit risk.
 
 Figure 20 shows an architecture for predicting credit risk by using DL on IBM Z.
 
+Figure 20 Architecture for credit risk prediction by using DL on IBM Z
+
+<!-- image -->
 Figure 20 Architecture for credit risk prediction by using DL on IBM Z
 
 Data scientists can start creating and training a DL AI model by using a Jupyter Notebook instance and Watson Studio. Then, they can deploy the model by using WML on CP4D running on IBM Z, which provides an endpoint. Other applications, including the IBM WebSphere server, can produce credit risk results by using the model's endpoint.
@@ -384,6 +450,9 @@ One possible solution is to build and train a TensorFlow based DL model that lea
 
 Figure 21 provides a high-level diagram of a clearing and settlement use case for financial transactions that uses CP4D on IBM Z and IBM LinuxONE.
 
+Figure 21 Clearing and settlement use case for financial transactions by using Cloud Pak for Data
+
+<!-- image -->
 Figure 21 Clearing and settlement use case for financial transactions by using Cloud Pak for Data
 
 Here are the steps of the high-level process flow:
@@ -442,6 +511,9 @@ Figure 22 provides an overview of the inferencing architecture for the RUL of an
 
 Figure 22 Inferencing architecture on IBM Z
 
+<!-- image -->
+Figure 22 Inferencing architecture on IBM Z
+
 Because we are looking into data-driven model development, the data set of our target is the run-to-failure data of the engine. We are looking into a supervised learning problem, and we use regression techniques to learn from the data. DL techniques such as Long Short-Term Memory (LSTM) or Gated Recurrent Units (GRU) are our choice because we are looking into a time series data set. TensorFlow or PyTorch frameworks are leveraged to create models. AI governance monitors the data and model drift to maintain the model quality throughout the model's life.
 
 Open-source data from NASA was used to build the AI model, which then was deployed on CP4D. CP4D enables the data-scientist's journey from modeling to deployment in a seamless process. Data engineers leverage Db2 to host the data set, which includes the training, testing, and validation of a data set. Since data is hosted on Db2, you can expect low latency while retrieving the data and serve data security needs because Db2 is hosted on the IBM Z platform. Data is fetched by the data refinery to do the necessary pre-processing and data imputations. You can use the programming languages Golang or C++ for real-time predictions, depending on customer needs. For more information about this topic, see "Use case 3: Clearing and settlement" on page 25.
@@ -460,6 +532,9 @@ Client-side applications can invoke a REST apiserver that handles some preproces
 
 Figure 23 on page 29 provides a more in-depth view of the architecture of an AI-based predictive maintenance application.
 
+Figure 23 In-depth architectural view
+
+<!-- image -->
 Figure 23 In-depth architectural view
 
 In summary, consider the following points while developing an AI-based predictive maintenance application:
@@ -500,6 +575,9 @@ AI is the current "market trend evolution" in video analytics and advancing the 
 
 S
 
+Figure 24 Architecture for AI-powered video analytics
+
+<!-- image -->
 Figure 24 Architecture for AI-powered video analytics
 
 Live camera feeds or recorded videos of an infant's movement are the inputs for a pose detection model. This video streaming data was stored in IBM Cloudfi Object Storage for image processing. Video data must be transformed into frames so that the infant's body poses can be detected. These post-estimation components of the pipeline predict the location of all 17-person key points with 3 degrees of freedom each (x, y location and visibility) plus two virtual alignment key points. This approach also embraces a compute-intensive heat map prediction of infant body posture.
@@ -640,6 +718,8 @@ UNIX is a registered trademark of The Open Group in the United States and other 
 
 Other company, product, or service names may be trademarks or service marks of others.
 
+<!-- image -->
+
 Back cover
 
 REDP-5695-00
@@ -647,3 +727,5 @@ REDP-5695-00
 ISBN 0738461067
 
 Printed in U.S.A.
+
+<!-- image -->
