--- a/tests/data/2203.01017v2.md
+++ b/tests/data/2203.01017v2.md
@@ -1,3 +1,5 @@
+## TableFormer: Table Structure Understanding with Transformers.
+
 Ahmed Nassar, Nikolaos Livathinos, Maksym Lysak, Peter Staar IBM Research
 
 { ahn,nli,mly,taa } @zurich.ibm.com
