--- a/tests/data/2206.01062.md
+++ b/tests/data/2206.01062.md
@@ -1,3 +1,5 @@
+## DocLayNet: A Large Human-Annotated Dataset for Document-Layout Analysis
+
 Birgit Pfitzmann IBM Research Rueschlikon, Switzerland bpf@zurich.ibm.com
 
 Christoph Auer IBM Research Rueschlikon, Switzerland cau@zurich.ibm.com
