--- a/tests/data/redp5110.md
+++ b/tests/data/redp5110.md
@@ -1,3 +1,10 @@
+Front cover
+
+
+<!-- image -->
+
+## Row and Column Access Control Support in IBM DB2 for i
+
 Implement roles and separation of duties
 
 Leverage row permissions on the database
@@ -5,11 +12,6 @@ Leverage row permissions on the database
 Protect columns by defining column masks
 
 ibm.com /redbooks
-
-Front cover
-
-
-<!-- image -->
 
 Jim Bainbridge Hernando Bedoya Rob Bestgen Mike Cain Dan Cruikshank Jim Denton Doug Mack Tom McKinley Kent Milligan
 
