--- a/tests/data/redp5695.md
+++ b/tests/data/redp5695.md
@@ -1,3 +1,10 @@
+Front cover
+
+
+<!-- image -->
+
+## IBM Cloud Pak for Data on IBM Z
+
 Jasmeet Bhatia
 
 Ravi Gummadi
@@ -12,11 +19,6 @@ Srirama Sharma
 
 
 <!-- image -->
-
-
-<!-- image -->
-
-Front cover
 
 
 <!-- image -->
